--- a/index.html
+++ b/index.html
@@ -318,8 +318,10 @@
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Web-App</li>
-            <li data-filter=".filter-project">Project</li>
+            <li data-filter=".filter-app">Machine Learning</li>
+            <li data-filter=".filter-project">Natural Language Processing</li>
+            <li data-filter=".filter-project">ETL</li>
+            <li data-filter=".filter-project">Big-Data</li>
           </ul>
         </div>
       </div>
@@ -340,7 +342,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Image recognition as Service</h4></center>
+          <center><h4>Enhancing DNS Resiliency During Natural Disasters</h4></center>
           <div class="portfolio-wrap">
             <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -561,9 +563,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              <a href="https://www.github.com/rajaprerak" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-              <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.linkedin.com/in/yeshwanth-p" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.github.com/Yashwanthp99" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+              <a href="mailto:yashwanth99p@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
             </div>
           </div>
