--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Analyst", "Data Engineer", "AI Enthusiast", "Humanist"],
+      strings: ["Analyst", "Data Engineer", "AI Enthusiast", "Humanist", "Artist"],
       loop: true,
       typeSpeed: 65,
       backSpeed: 65
