--- a/projects/crash.html
+++ b/projects/crash.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Resume Section Classifier</title>
+  <title>Crash report analysis</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,16 +43,19 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Resume Section Classifier</h2>
+            <h2 style="color:#12d640">Crash report analysis</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Python, scikit-learn, numpy, pandas</li>
-              <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ResumeSectionClassifier" target="_blank">Project Link</a></li> -->
+              <li><strong>Tech Stack</strong>: Python, Scikit learn</li>
+                <!-- <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li> -->
+              <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li> -->
             </ul>
 
             <p>
-              Given the Resume of a person, detect the section words such as experience, skills, projects, etc. Implemented different machine learning algorithms to get the desired output.            
+              - This project analyzes New York City collision data to predict crash severity and identify influential factors such as vehicle make, driver behavior, and crash circumstances.            
             </p>
+            <p>- Using machine learning techniques like Random Forest, XGBoost, and Neural Networks, it achieved high accuracy in predicting collision outcomes and revealed critical insights for targeted safety measures.</p>
+            <p>- The study integrates data preprocessing, feature engineering, and visualization to guide policy interventions under the Vision Zero initiative, aiming to enhance urban traffic safety.</p>
           </div>
 
         </div>
@@ -61,7 +64,7 @@
     </div><!-- End Portfolio Details -->
   </main><!-- End #main -->
 
- <!-- Vendor JS Files -->
+<!-- Vendor JS Files -->
   <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -79,4 +82,8 @@
 
 </body>
 </html>
+
+
+
+
 
