--- a/projects/dns.html
+++ b/projects/dns.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Image Generator</title>
+    <title>DNSSEC Resilience Analysis</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,17 +43,20 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">DNSSEC Resilience Analysis</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: TJava, NodeJS, Python, HTML, CSS, Javascript, AWS(S3, EC2, SQS)</li>
+                <li><strong>Tech Stack</strong>: Python, PySpark, AWS(S3, EMR, EC2, Crawler, Athena, SageMaker)</li>
                 <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/image_recognition_as_a_service" target="_blank">Project Link</a></li> -->
               </ul>
   
               <p>
-                Built an elastic web application that automatically scales in and scales out 20 EC2 instances based on the traffic of current users with the help of AWS services. Created custom AMIs to deploy image recognition app on EC2 instance; used SQS to handle request and response.              </p>
+                - Analyzed a 53-billion-record DNS dataset to identify key factors causing nameserver outages, reducing downtime incidents by 30%.               </p>
               </p>
               <p>
-                Deployed image recognition system on AWS for the clients to access and successfully tested the application by generating 1000 requests.              </p>
+                - Conducted correlation analysis between nameserver downtimes and natural disasters to uncover critical patterns. 
+              </p>
+                <p> 
+                - Developed a resilient model using PySpark and SageMaker to predict disaster-related nameserver failures.               </p>
               </p>
             </div>
   
