--- a/projects/insurance.html
+++ b/projects/insurance.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ML-DL WebApp</title>
+  <title>Predicting Insurance Claims</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,17 +43,19 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
-
+            <h2 style="color:#12d640">Predicting Insurance Claims</h2>
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li>
-              <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li> -->
+              <li><strong>Tech Stack</strong>: Tensorflow, Python, numpy, keras, pandas, PySpark</li>
+              <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/Generative_Model" target="_blank">Project Link</a></li> -->
             </ul>
 
             <p>
-              The web app created for showcasing machine learning and deep learning projects. The app consists of the flask as backend and bootstrap for the frontend part. The projects include text summarizer, image classifier and iris classifier.            
+              This project employs advanced machine learning algorithms to predict vehicle insurance claim amounts, optimizing claim assessment processes and enhancing operational efficiency.             
             </p>
+            <p>
+              By automating data analysis and identifying key drivers of claim costs, it minimizes processing times, mitigates fraud risks, and improves financial forecasting.            
+            </p>
+            <p>Core technologies include Python, regression models, and data visualization techniques, enabling actionable insights and fostering improved customer satisfaction through expedited claim resolutions.</p>
           </div>
 
         </div>
@@ -62,7 +64,7 @@
     </div><!-- End Portfolio Details -->
   </main><!-- End #main -->
 
-<!-- Vendor JS Files -->
+ <!-- Vendor JS Files -->
   <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -80,8 +82,4 @@
 
 </body>
 </html>
-
-
-
-
 
