--- a/projects/twitteranalysis.html
+++ b/projects/twitteranalysis.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Image Generator</title>
+    <title>Twitter Data ETL for Sentiment Analysis</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,20 +43,20 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Image Generator</h2>
+              <h2 style="color:#12d640">Twitter Data ETL for Sentiment Analysis</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Python, HTML, CSS, Bootstrap, GCP(Pub/Sub, Dataflow, Data Studio, GAE, BigQuery)</li>
+                <li><strong>Tech Stack</strong>: Python, HTML, CSS, Apache Airflow, AWS (EC2, S3)</li>
                 <!-- <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis" target="_blank">Project Link</a></li> -->
               </ul>
   
                 <p>
-                Created a web‑based elastic application to provide the user with a detailed analysis of the sentiment of users on top 10 trending movies and songs with the help of Google Cloud Platform services.              
+                - Created a web‑based application to provide the user with a detailed analysis of the sentiment of users on top 10 trending movies and songs.              
                 </p>
                 <p>
-                Coded Pub/Sub routine to fetch 1000 tweets at a time from Twitter; used Dataflow for resource autoscaling and dynamic work rebalancing, reducing overall response time by 50\%; stored data in BigQuery table for efficiently displaying data in Google DataStudio.
+                - Scheduled a routine to fetch 1000 tweets at a time from Twitter; reducing overall response time by 50%; stored data in AWS S3 table for efficiently displaying data.
                 </p>
                 <p>
-                Tested the scalability of web application by generating 10000 user requests with the help of Apache Beam.
+                - Tested the scalability of web application by generating 10000 user requests using Apache Beam.
                 </p>
             </div>
   
